--- a/index.html
+++ b/index.html
@@ -28,12 +28,11 @@
                 <li class="navItem" data-falg="infoItem2"><span class="arrow"></span>连接数据库/配置信息</li>
                 <li class="navItem" data-falg="infoItem3"><span class="arrow"></span>CMEU首页说明</li>
                 <li class="navItem" data-falg="infoItem4"><span class="arrow"></span>修改属性页说明</li>
-                <li class="navItem" data-falg="infoItem5"><span class="arrow"></span>添加属性页说明</li>
-                <li class="navItem" data-falg="infoItem6"><span class="arrow"></span>添加集合页说明</li>
-                <li class="navItem" data-falg="infoItem7"><span class="arrow"></span>添加主键策略说明</li>
-                <li class="navItem" data-falg="infoItem8"><span class="arrow"></span>dao/service接口说明</li>
-                <li class="navItem" data-falg="infoItem9"><span class="arrow"></span>Assist使用说明</li>
-                <li class="navItem" data-falg="infoItem10"><span class="arrow"></span>开源说明</li>
+                <li class="navItem" data-falg="infoItem5"><span class="arrow"></span>添加第二级新表说明</li>
+                <li class="navItem" data-falg="infoItem6"><span class="arrow"></span>添加第三级新表说明</li>
+                <li class="navItem" data-falg="infoItem7"><span class="arrow"></span>dao/service接口说明</li>
+                <li class="navItem" data-falg="infoItem8"><span class="arrow"></span>Assist使用说明</li>
+                <li class="navItem" data-falg="infoItem9"><span class="arrow"></span>开源说明</li>
             </ul>
         </div>
         <div class="docInfo">
@@ -41,7 +40,7 @@
             <div class="infoItem1">
                 <p>
                     MyBatis-CMEU全称为:MyBatis Config Mapper Entity Util<br/>
-                    简单来说MyBatis-CMEU是一款使用Javafx开发的MyBatis逆向工程帮助工具,该支持Oracle,Mysql,SqlServer,PostgreSql等数据库的生成,<br/>
+                    简单来说MyBatis-CMEU是一款使用Javafx开发的MyBatis逆向工程帮助工具,该工具支持Oracle,Mysql,SqlServer,PostgreSql等数据库的生成,<br/>
                     使用该工具你只需要连接数据库,选择你需要的表(CMEU2.0支持3表关联),点击执行创建,
                     工具就会帮你生成实体类以及持久层(dao)接口/逻辑层(service)接口/逻辑层(serviceImpl)实现类/映射文件(Mapper)的增删改查;
                     Assist类是专门为MyBatis-CMEU设计的帮助类,该类可以无SQL注入的实现动态查询,排序,去重等操作;
@@ -186,15 +185,55 @@
                 <p class="indent">
                     与首页一样大部分选择框鼠标悬浮在其上都会显示tooltip提示;
                 </p>
+                <h3>属性表格说明:</h3>
+                <p class="indent">
+                    属性表格中:你可以选择是否创建该行属性,创建打钩,不创建取消打钩;
+                    表中的列名与jdbc数据类型无法修改,java数据类型以及属性名可以自己修改成自己想要的类型/名称,
+                    java数据类型可以自己输入或者下拉选择,属性名双击列便可以输入新的名称回车修改;</p>
                 <h2>选择框相关说明:</h2>
-                <h3></h3>
+                <p class="indent">将鼠标悬浮到其选择框上面停留将会出现相应的提示!</p>
+                <h3>表主键名称:</h3>
+                <p class="indent">
+                    系统会自动识别表中的主键,如果识别有误的话可以自己改正;
+                </p>
+                 <h3>自定义属性:</h3>
+                <p class="indent">
+                    类型输入你要创建属性的类型;名称输入你要创建的属性名称;点击->添加 便会将属性添加到类中;
+                </p>
+                <h3>生成主键策略说明:</h3>
+                <div class="center">
+                    <img src="resource/images/selectKey.png" alt="主键策略" width="403">
+                </div>
+                <p class="indent">
+                    选择生成主键策略后系统会根据你的数据库类型为你生成基础的模板,这个时候你需要补充输入框中缺乏的信息,比如上图的示例中为Oracle的主键策略,但是还缺少了序列的名称,这个时候你需要将序列名补充上;
+                </p>
+                <h3>添加表作为表的一个属性/集合说明:</h3>
+                <p class="indent">
+                    点击添加表作为属性/集合时将会打开一个新的窗口,这个时候你可以选择相应的表来做为当前类的一个属性,系统将自动为你生成关联你可以一次查询到想要的信息(目前支持3层关系),界面请看下一节添加新表说明;
+                </p>
+                <h3>确定与取消说明:</h3>
+                <p class="indent">
+                    当点击确定的时候完成当前的所以修改;当点击取消的时候系统会提示你如果取消的话所有的修改将无效,这个时候你可以选择取消操作或者确定操作;
+                </p>
+
             </div>
-            <div class="infoItem5" style="height: 500px">5</div>
-            <div class="infoItem6" style="height: 500px">6</div>
+            <div class="infoItem5">
+                <div class="line"></div>
+                <div class="center">
+                    <h1 class="lineHeight">添加第二级新表说明</h1>
+                    <img src="resource/images/5.png" alt="添加第二级新表界面" width="890">
+                </div>
+            </div>
+            <div class="infoItem6" style="height: 500px">
+                <div class="line"></div>
+                <div class="center">
+                    <h1 class="lineHeight">添加第三级级新表说明</h1>
+                    <img src="resource/images/6.png" alt="添加第三级新表界面" width="890">
+                </div>
+            </div>
             <div class="infoItem7" style="height: 500px">7</div>
             <div class="infoItem8" style="height: 500px">8</div>
             <div class="infoItem9" style="height: 500px">9</div>
-            <div class="infoItem10" style="height: 500px">9</div>
             <div style="height: 300px;width: 100%"></div>
         </div>
     </div>
@@ -227,14 +266,11 @@
     var infoTop7 = ($(".infoItem7").offset().top);
     var infoTop8 = ($(".infoItem8").offset().top);
     var infoTop9 = ($(".infoItem9").offset().top);
-    var infoTop10 = ($(".infoItem10").offset().top);
 
     $(window).scroll(function () {
         scrollN = $(document).scrollTop();
         scrollN += 80;
-        if (scrollN >= infoTop10) {
-            navAction($(".navItem:eq(9)"));
-        } else if (scrollN >= infoTop9) {
+        if (scrollN >= infoTop9) {
             navAction($(".navItem:eq(8)"));
         }else if (scrollN >= infoTop8) {
             navAction($(".navItem:eq(7)"));
