MyBatis-CMEU2.0相关的使用说明

--- a/index.html
+++ b/index.html
@@ -414,13 +414,13 @@
                     <h1 class="lineHeight">开源以及部分素材的来源说明</h1>
                 </div>
                 <ol>
-                    <li>本软件开源于github:<a href="https://github.com/shenzhenMirren/MyBatis-CMEU" target="_blank">https://github.com/shenzhenMirren/MyBatis-CMEU</a>, 本软件允许任何人做修改发布,但是希望也是免费提别人使用,同时希望留下QQ交流群号,以便于大家交流以及改进软件,同时留下QQ交流群也表示对作者以及软件的尊重;毕竟作者花费了很多心血才完成该软件;作者开发本软件的出发点就是让每个开发人员更轻松的完成开发;</li>
+                    <li>本软件完全开源并托管于github:<a href="https://github.com/shenzhenMirren/MyBatis-CMEU" target="_blank">https://github.com/shenzhenMirren/MyBatis-CMEU</a>, 本软件允许任何人做修改发布,但是希望也是免费提别人使用,同时希望留下QQ交流群号,以便于大家交流以及改进软件,同时留下QQ交流群也表示对作者以及软件的尊重;毕竟作者花费了很多心血才完成该软件;作者开发本软件的出发点就是让每个开发人员更轻松的完成开发;</li>
                     <li>本软件的icon蓝领带小鸟修改来自百度搜索出来的图片;</li>
                     <li>本软件的界面图标数据库连接,配置信息,数据库,表的图标取自mybatis-generator-gui:群号为:613911142</li>
                     <li>本软件作者Email为:690389491@qq.com,使用过程软件出现问题或者有好的建议可以发Email给我;</li>
                 </ol>
             </div>
-            <div style="height: 400px;width: 100%"></div>
+            <div style="height: 1000px;width: 100%"></div>
         </div>
     </div>
 </div>
