MyBatis-CMEU2.0相关的使用说明

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     SqlServer=sqljdbc2008.jar<br/>
                     MySql=mysql-connector-java-5.1.38.jar<br/>
                     PostgreSql=postgresql-9.4.1209.jar<br/>
-                    如果跟你的版本不一致可以到libs里面将架包改成你的架包,但是命名规则为:数据库小写JBDC大写<br/>
+                    如果跟你的版本不一致可以到libs(免JDK版在app/libs)里面将架包改成你的架包,但是命名规则为:数据库小写JBDC大写<br/>
                     示例:sqlserverJDBC.jar<br/>
                 </p>
                     <img src="resource/images/jdbcDriver.png" alt="驱动示例图:" width="628">
