MyBatis-CMEU2.0相关的使用说明

--- a/index.html
+++ b/index.html
@@ -248,7 +248,14 @@
                     <p class="indent">
                         点击添加表作为属性/集合时将会打开第三个窗口,选择新的窗口,新窗口与当前基本一致界面如下图,只是第三个窗口不能再继续添加属性或者集合;
                     </p>
+                    <h3>与上一级连接的方式说明:</h3>
+                    <p class="indent">
+                        该功能用于当添加属性或者集合时指明该表与上一级的表连接关系,三种连接方式自己选择,系统会识别上一张表的名称,以及主键列,并补充至其输入框中,如果连接表输入框中或者连接列输入框中的连接信息有误可以自己修改;<br/>
+                        <span class="redColor">当前窗体连接表/连接列的输入框的信息为上一级的信息,表示当前窗体与上一级的连接关系;</span>
+                    </p>
+                    <h3>第二/三级窗体的界面:</h3>
                     <div class="center">
+                        <br/>
                         <img src="resource/images/6.png" alt="第三级窗体图片" width="890">
                     </div>
             </div>
