MyBatis-CMEU2.0相关的使用说明

--- a/index.html
+++ b/index.html
@@ -203,6 +203,10 @@
                 <p class="indent">
                     创建MyBatis的帮助工具,用于获取sqlsession,如果你已经创建了MyBatis配置文件,帮助工具将自动帮你读取配置文件,你可以通过它获得sqlSession等;
                 </p>
+                    <h3>文件编码格式:</h3>
+                    <p class="indent">
+                        文件编码格式为文件所有文件以什么方式的格式编码生成;默认以选择utf-8,如果你需要用到GBK编码格式下拉选择便可;
+                    </p>
                  <h3>保存配置:</h3>
                     <p class="indent">
                         用于将数据面板的数据保存到配置中心,<span class="redColor">注意事项:配置名称不能重复;如果有重复请先删除原来的配置</span>
@@ -215,6 +219,7 @@
                     <p class="indent">
                         执行创建将完成所有数据面板上的所有类/dao/service的生成;<span class="redColor">注意事项:项目所在目录以及表名不能为空;</span>
                     </p>
+
                 </div>
             </div>
             <div class="infoItem4">
