MyBatis-CMEU2.0相关的使用说明

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     <span class="redColor">runtime:</span>runtime为java运行所需jre等文件,
                 </p>
                 <p class="indent">
-                    <span class="redColor">其通用版运行环境要求:</span>本工具使用的信息提示为jdk1.8.40的特新,开发环境基于jdk1.8.66开发,当系统中存在JDK1.8.66以上(最少已知的特新中要求jdk版本号大于1.8.40),双击便可运行;
+                    <span class="redColor">通用版运行环境要求:</span>运行该工具需要JDK1.8.66及以上;因为本工具使用的信息提示为jdk1.8.40的特新,开发环境基于jdk1.8.66开发,当系统中存在JDK1.8.66以上(最少已知的特新中要求jdk版本号大于1.8.40),双击便可运行;
                 </p>
                 <p class="indent">
                     <span class="redColor">免JDK版运行环境要求:</span>文件存放路径中不存在中文路径,存在中文路径可能无法运行,双击其系统对应运行文件便可,比如Windows版运行.exe便可;第一次启动可能比较慢请耐心等候;
