MyBatis-CMEU2.0相关的使用说明

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                 </div>
                 <h3>数据库列表</h3>
                 <p class="indent">
-                    当添加数据库连接后,可以双击显示数据库中所以的表,也可以用过右键打开/关闭/删除现有的数据库连接;
+                    当添加数据库连接后,可以双击显示数据库中所以的表,也可以用过右键打开/关闭/修改/删除现有的数据库连接;
                 </p>
                 <p class="indent">
                     通过双击选择所要创建的表名将表的信息加载至右侧数据面板;
