MyBatis-CMEU2.0相关的使用说明

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>MyBatis-CMEU使用说明</title>
+    <link rel="icon" href="resource/images/Logo.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="resource/images/Logo.png" type="image/x-icon"/>
+    <title>MyBatis-CMEU</title>
     <script type="text/javascript">
         function isPC() {
             var userAgentInfo = navigator.userAgent;
@@ -55,11 +57,6 @@
     <div class="des">
         MyBatis-CMEU是一款使用Javafx开发的MyBatis逆向工程,可以生成实体类以及持久层(dao)接口、逻辑层(service)接口、逻辑层(serviceImpl)实现类、映射文件(Mapper)等；
         <br/>CMEU有可能使你忘记Mapper怎么写！
-    </div>
-    <div class="downBox">
-        <a href="http://dl.download.csdn.net/down11/20170603/b55fc72389017ebb88df7a544395ff48.rar?response-content-disposition=attachment%3Bfilename%2A%3D%22utf8%27%27MyBatis-CMEU2.0%E5%90%84%E5%B9%B3%E5%8F%B0%E9%80%9A%E7%94%A8%E7%89%88%5B%E8%A6%81%E6%B1%82JDK1.8.66%E4%BB%A5%E4%B8%8A%5D%E5%8C%85%E5%90%AB%E4%BD%BF%E7%94%A8%E8%AF%B4%E6%98%8E.rar%22&OSSAccessKeyId=9q6nvzoJGowBj4q1&Expires=1496467419&Signature=wfDEga6Pn2pMudA%2BDbL1Wd3RyOE%3D" target="_blank">
-            <span class="downLoad">通用版下载</span>
-        </a>
     </div>
     <div class="downBox">
         <a href="https://pan.baidu.com/s/1slbf72l#list/path=%2FMyBatis-CMEU2.0" target="_blank">
