MyBatis-CMEU2.0相关的使用说明

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <div class="menuBack" style="display: none;"></div>
 <!--头部-->
 <div class="header">
-    <img class="menu" src="resource/images/menu.png" alt="">
+    <img class="menu" src="resource/images/menus.png" alt="">
     <div class="logos">
         <h3>
             <img src="resource/images/Logo.png" width="65" height="54">
