MyBatis-CMEU2.0相关的使用说明

--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
                     工具就会帮你生成实体类以及持久层(dao)接口/逻辑层(service)接口/逻辑层(serviceImpl)实现类/映射文件(Mapper)的增删改查;
                     Assist类是专门为MyBatis-CMEU设计的帮助类,该类可以无SQL注入的实现动态查询,排序,去重等操作;
                     当数据需要分页时通过Assist只需设置两个参数便可以实现分页;<br/>
-                    关于MyBatis-CMEU运行要求,运行时文件存放路径不能存在中文;CMEU窗体基于javafx8,语法使用大部分java8特性运行环境要求JDK1.8<br/>
-                    QQ交流群里提供Windows/Linux/Mac免JDK版(以将JDK打包在程序中),群号:519714660<br/>
+                    关于MyBatis-CMEU运行要求,运行时文件存放路径不能存在中文;CMEU窗体基于javafx8,语法使用大部分java8特性,开发使用环境使用1.8.66，已知使用特性中最低要求为1.8.40，所以运行环境要求JDK1.8.66及以上<br/>
+                    <span class="redColor">官方QQ交流群号: </span> 519714660<br/>
                 </p>
                 <h3>基本常用功能预览:</h3>
                 <ol>
