--- a/index.html
+++ b/index.html
@@ -232,6 +232,13 @@
                 <div>
                     <h3>项目所在目录:</h3>
                     <p class="indent">输入或者通过按钮选择项目的目录 <span class="redColor">(也就是路径+项目名称)</span>;</p>
+                    <h3>路径占位符{路径}: </h3>
+                    <p class="indent">
+                        占位符主要作用于类似Maven/Gradle等采用src/main/java等源码规范路径,假设我们生成的文件要放置在,src/maim/java
+                        /com/cmeu/dao中,src/maim/java是源码路径,com/cmeu/dao是项目中的包,这时我们就可以这样写
+                        {src/maim/java}com.cmeu.dao或者{src.maim.java}com.cmeu.dao    ,CMEU生成的时候就会自动把{src/maim/java}
+                        识别成源码文件夹,把com.cmeu.dao识别为项目中的包,
+                    </p>
                     <h3>更新mapper资源路径: </h3>
                     <p class="indent">如果已经存在MyBatis配置文件,可以输入或者通过按钮选择MyBatis配置文件所在路径,系统将自动将你新建的映射文件自动更新到mappers中;<br/>
                         如果不存在配置文件,可以使用勾选创建配置文件;
@@ -263,6 +270,10 @@
                     <h3>文件编码格式:</h3>
                     <p class="indent">
                         文件编码格式为文件所有文件以什么方式的格式编码生成;默认以选择utf-8,如果你需要用到GBK编码格式下拉选择便可;
+                    </p>
+                    <h3>生成Spring-Service注解:</h3>
+                    <p class="indent">
+                        当选勾该项后如果有创建service层的话,serviceImpl会在类加上@Service注解,调用了Dao层接口的会加上@Autowired注解
                     </p>
                     <h3>保存配置:</h3>
                     <p class="indent">
@@ -298,7 +309,7 @@
                 <h3>表的别名:</h3>
                 <p class="indent">
                     表的别名用于Mapper映射文件中resultMap节点属性列对应的映射列,
-                    如果起了别名resultMap的id/column属性将会以别名_数据库命名,如果没有起别名将会以类名+属性从上到下的序号编号;
+                    如果起了别名resultMap的id/column属性将会以别名_列的名字命名,如果没有起别名将会以类名+属性从上到下的序号编号;
                     之所以有这个属性是为了当存在相同列名时是不会冲突;
                 </p>
                 <h3>表主键名称:</h3>
