更新2.1的说明文档

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 <h1 class="lineHeight center">程序主界面</h1>
                 <div class="center">
 
-                    <img src="resource/images/1.png" alt="index" width="890">
+                    <img src="resource/images/index.png" alt="index" width="890">
 
                 </div>
                 <h3>工具基本目录结构:</h3>
@@ -221,7 +221,7 @@
                 <div class="line"></div>
                 <h1 class="lineHeight center">首页使用说明</h1>
                 <div class="center">
-                    <img src="resource/images/1.png" alt="首页" width="890">
+                    <img src="resource/images/index.png" alt="首页" width="890">
                 </div>
                 <h3>数据库列表</h3>
                 <p class="indent">
@@ -238,8 +238,8 @@
                     <p class="indent">
                         占位符主要作用于类似Maven/Gradle等采用src/main/java等源码规范路径,假设我们生成的文件要放置在,src/maim/java
                         /com/cmeu/dao中,src/maim/java是源码路径,com/cmeu/dao是项目中的包,这时我们就可以这样写
-                        {src/maim/java}com.cmeu.dao或者{src.maim.java}com.cmeu.dao    ,CMEU生成的时候就会自动把{src/maim/java}
-                        识别成源码文件夹,把com.cmeu.dao识别为项目中的包,
+                        {maim/java}com.cmeu.dao或者{maim.java}com.cmeu.dao    ,CMEU生成的时候就会自动把{maim/java}
+                        识别成源码文件夹,把com.cmeu.dao识别为项目中的包,(src)已经在项目跟目录选择添加了,所以src可以不用再写
                     </p>
                     <h3>更新mapper资源路径: </h3>
                     <p class="indent">如果已经存在MyBatis配置文件,可以输入或者通过按钮选择MyBatis配置文件所在路径,系统将自动将你新建的映射文件自动更新到mappers中;<br/>
